--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,7 @@ version: "3"
 services:
   api:
     image: ml-game-api
-    build: 
-      context: .
-      args:
-        - DATABASE_URL=${DATABASE_URL:-postgresql://user:password@localhost:5432/mydb?schema=public}
+    build: .
     networks:
       - backend
     ports:
